--- a/version3.tex
+++ b/version3.tex
@@ -67,6 +67,8 @@
 \newcommand{\dd}{\mathrm{d}}
 \renewcommand{\vec}{\mathbf}
  \newcommand{\subscript}[2]{$#1 _ #2$}
+ 
+ \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 
  \newcommand{\Lb}{\pazocal{L}}
  
@@ -170,7 +172,7 @@ The following questions arise:
 
 To answer these questions we employed a new calibration methodology.
 
- \mich{The purpose of this paper is to answer the given research questions. The first part of the paper presents the real world background of the analyzed SR infiltration data. However, for the demonstrative purposes of this contribution, we have significantly reduced this data part, and only the mean values are analyzed here. Data error propagation and further statistical analyzes are beyond the scope of this paper. The major part of this paper is focused on a design calibration methodology of the SR experiment. We start with derivation of the governing equation for this class of problems. Numerical issues with convective term as well as the domain shape restrictions and boundary condition setup is given. Then we continue with a synthetic inverse problem with known exact solution, where we try to identify SHPs from cumulative fluxes across the Dirichlet boundary, which is an analogy to the infiltration experiment. Based on the results of this synthetic problem we construct calibration methodology. With the proposed calibration methodology we presume smooth and continuous convergence properties of the inverse problem, which is represented by a discrete analogue of the Richards equation, for both nonlinear operator stopping criterion, temporal discretization and spatial discretization. Based on the results from the synthetic problem, we are already aware of multimodality of this inverse model. In order to obtain a unique solution we employ an expert knowledge as a final decision making criterion, since each parametric set comes with a distinct porosity value. Despite we can't measure the exact porosity of the top soil layer, since it is impossible to collect undisturbed samples with representative volume size, and so removing this parameter from the inverse model is questionable, acceptable ranges of porosity form a part of the expert knowledge. 
+ \mich{The purpose of this paper is to answer the given research questions. The first part of the paper presents the real world background of the analyzed SR infiltration data. However, for the demonstrative purposes of this contribution, we have significantly reduced this data part, and only the mean values are analyzed here. Data error propagation and further statistical analyzes are beyond the scope of this paper. The major part of this paper is focused on a design calibration methodology of the SR experiment. We start with derivation of the governing equation for this class of problems. Numerical issues with convective term as well as the domain shape restrictions and boundary condition setup is given. Then we continue with a synthetic inverse problem with known exact solution, where we try to identify SHPs from cumulative fluxes across the Dirichlet boundary, which is an analogy to the infiltration experiment. Based on the results of this synthetic problem we construct calibration methodology. With the proposed calibration methodology we presume smooth and continuous convergence properties of the inverse problem, which is represented by a discrete analogue of the Richards equation, for both nonlinear operator stopping criterion, temporal discretization and spatial discretization. Based on the results from the synthetic problem, we are already aware of multimodality of this inverse model. In order to obtain a unique solution we employ an expert knowledge as a final decision making criterion, since each parametric set comes with a distinct saturated water content (herafter $\theta_s$) value. Despite we can't measure the exact value of $\theta_s$ for the top soil layer, since it is impossible to collect undisturbed samples with representative volume size, and so removing this parameter from the inverse model is questionable, acceptable ranges of $\theta_s$ form a part of the expert knowledge. 
  
  In general, the proposed novel calibration methodology can be applied  for inverse analyses of quasi-linear parabolic differential equations, such as the Richards equation problems.
  }
@@ -197,21 +199,39 @@ The second part of the methodology covers issues in the REVG inverse model. Sect
 Section~\ref{bccond} discusses issues in creating the domain scheme and selecting appropriate boundary conditions, since it is not always easy to find an agreement between the mathematical model setup and  physical interpretation. Section \ref{objdef} concludes with a description of the construction of the objective function, and the methodology of the automatic calibration. 
 
 
+\mich{\subsubsection{Comment on soil hydraulic parameters}
+\label{shpdescr}
+
+\linelabel{line:shp} The soil hydraulic parameters (SHP) studied in this contribution refer to hydraulic properties of the porous medium under variably saturated state. Using the model by~\cite{vangenuchten} the following SHP are studied in this contribution
+\begin{description}
+\item[$\alpha$] -- inverse of air entry value [L$^{-1}$]
+\item[$n$] -- pore size distribution parameter [-]
+\item[$\theta_s$] -- saturated water content [-]
+\item[$K_s$] -- saturated hydraulic conductivity [L.T$^{-1}$]
+\item[$S_s$] -- specific storage [L$^{-1}$]
+\end{description}
+A detail description on $K_s$ and $S_s$ parameter is given by~\cite{bear1979}, and a detail description on parameters $\alpha$, $n$, and $\theta_s$ is given by~\cite{vangenuchten}.}
+
+
+
 
 \subsection{Obtaining the input data for the inverse problem}
 \label{assamb}
 
 
+
 \subsubsection{Site description and assembling the experimental data}%[lukas]
 \label{site}
 
-\mich{In this section a brief description of the conducted experiments is given. Since this contribution is focused on calibration methodology, we will significantly reduce the experimental data analyses. Complete description of this experiment including stastitical analyses of the experimental data is given in~\citep{jacka-site}.
+\label{povodi}
+
+\mich{In this section a brief description of the conducted experiments is given. Since this contribution is focused on calibration methodology, we will significantly reduce the experimental data analyses. Complete description of this experiment including statistical analyses of the experimental data is given in~\citep{jacka-site}.
 }
 
 
-The study site was located in the \v{S}umava National Park, Czech Republic, and has been described in \citep{Jacka1}. The location of the site in a map of Modrava 2 catchment is presented by \cite{Jacka2}.
+The study site was located in the \v{S}umava National Park, Czech Republic,\linelabel{line:marker} and has been described in \citep{Jacka1}. The location of the site in a map of Modrava 2 catchment is presented by \cite{Jacka2}.
 The soil profile is described by four different layers as seen on figure~\ref{experiment}. 
-\mich{Series of tension meter measurements of the top soil layer have been conducted on the site. The average soil suction head was estimated at 280~cm. If we further assume no-flow initial condition, then the average groundwater table can be roughly estimated at 280~cm below the surface. We are aware, that this assumption is a subject of a strong uncertainty. In a real world the soil suction head distribution is almost never hydrostatic (especially for this relatively humid mountainous region), as well as the tension meter data exhibit sever uncertainties. And so the estimated groundwater table is rather an overhead limit, which is already a significantly distant from the top-soil layer. With such hydrogeological configuration the effect of groundwater on infiltration experiment is expected to vanish. }
+\mich{Series \linelabel{line:gw} of tension meter measurements of the top soil layer have been conducted on the site. The average soil suction head was estimated at 280~cm. If we further assume no-flow initial condition, then the average groundwater table can be roughly estimated at 280~cm below the surface. We are aware, that this assumption is a subject of a strong uncertainty. In a real world the soil suction head distribution is almost never hydrostatic (especially for this relatively humid mountainous region), as well as the tension meter data exhibit sever uncertainties. And so the estimated groundwater table is rather an overhead limit, which is already a significantly distant from the top-soil layer. With such hydrogeological configuration the effect of groundwater on infiltration experiment is expected to vanish. }
 
 
 
@@ -323,7 +343,7 @@ Note that we should avoid using the coordinates, where $r=0$.
 
 
 \subsection{Domain setup}%[michal]
-\label{bccond}
+\label{sec:bccond}
 
 
 
@@ -332,6 +352,7 @@ Note that we should avoid using the coordinates, where $r=0$.
 
 
 \subsubsection{Initial and boundary condition setup}
+\label{ibc}
 
  \begin{figure}
 \centering
@@ -341,7 +362,7 @@ Note that we should avoid using the coordinates, where $r=0$.
  \label{valecbc}
 \end{figure}
 
-\mich{The computational domain scheme is depicted on figure~\ref{valecbc}.}
+\linelabel{line:ibc} \mich{The computational domain scheme is depicted on figure~\ref{valecbc}.}
 The initial condition was assumed as a steady state  solution  of \eqref{richaxi} with the boundary $\Gamma_1 \cup \Gamma_2$ assumed as a no-flow boundary -- thus the entire domain $\Omega$ was considered to be in a hydrostatic state. The initial condition states that 
 \begin{lineq}
 \label{icond}
@@ -363,21 +384,21 @@ It is apparent that the wetting front originating from our infiltration experime
 \end{lineq}
 is in a conflict with the initial condition (since the outer normal vector $\vec{n} = \left(\begin{smallmatrix} &0 \\ -&1 \end{smallmatrix} \right)$), and produces extra computational costs. The computed fluxes produced at the bottom boundary in the beginning of the simulation with such a boundary setup, originates from the initial and boundary condition mismatch, and has no physical meaning.
 
-Physically correct boundary conditions for the bottom boundary is either the Neumann no-flow boundary at the impermeable layer or Dirichlet boundary both at the groundwater table. We chose a constant Dirichlet boundary condition. \mich{The minimal depth} of the groundwater table is approximately -280~cm below the surface, and  we assume that the water table remains constant during the experiment. With this particular setup the domain became extremely narrow and deep, see figure~\ref{valec}.
+Physically correct boundary conditions for the bottom boundary is either the Neumann no-flow boundary at the impermeable layer or Dirichlet boundary both at the groundwater table. We chose a constant Dirichlet boundary condition. \mich{The minimal depth} of the groundwater table is approximately -280~cm below the surface, and  we assume that the water table remains constant during the experiment. With this particular setup the domain became extremely narrow and deep, see figure~\ref{valec}.\mich{ \linelabel{line:dbc} The potential implication of this assumption is that the groundwater aquifer adsorbs the entire infiltrated amount without affecting its volume. In theory, this assumption is non-physical. However, for a short time experiment, such as the evaluated infiltration experiment, when the infiltrated amount within the simulation time even doesn't reach the groundwater aquifer, and also with the consideration, that the infiltrated amount is completely negligible in comparison to the expected groundwater aquifer volume, this assumption becomes acceptable.}
 
 
 
 
 
 The locations of the domain boundaries are depicted in figure~\ref{valecbc}. The boundary conditions are specified as follows (with the reference level $z=0$ located at the top boundary)
-\begin{lineq} 
+\mich{\begin{lineq} 
 \label{bccond}
 \begin{split}
 h(x,t) &= 4 \; \mbox{cm} \Rightarrow H(x,t) = 4 \; \mbox{cm}; \\ &\forall (x,t) \in \Gamma_1 \times [0,T), \\
-\frac{\partial H}{\partial \vec{n}} &= 0; \, \forall (x,t) \in \Gamma_2 \times [0,T), \\
+\norm{\frac{\partial H}{\partial \vec{n}}}_2 &= 0; \, \forall (x,t) \in \Gamma_2 \times [0,T), \\
 h(x,t) &= 0  \; \mbox{cm}  \; \Rightarrow \; H(x,t) = -280.0  \; \mbox{cm}; \\ &\forall (x,t) \in \Gamma_3 \times [0,T).
 \end{split}
-\end{lineq}
+\end{lineq}}
 where $T$ is the simulation end time [T], and $\vec{n}$ is the boundary normal vector.
 
 \subsubsection{Domain shape restrictions}
@@ -396,14 +417,14 @@ where $T$ is the simulation end time [T], and $\vec{n}$ is the boundary normal v
 It is well-known that sudden changes in domain shapes, spikes and discontinuities yield numerical difficulties (e.g. the Lipschitz boundary restrictions~\citep{braess}).
 In order to avoid computational difficulties during the automatic calibration procedure the infiltration ring thickness was oversized  to 2.5~cm, see figure~\ref{valec}. It is obvious that the real ring thickness is much smaller (in our case 2~mm), but using the real ring thickness yields possible numerical issues. 
 
-\mich{In order to evaluate the effect of such simplification we have solved the equation~\eqref{richaxi} accompanied with the initial condition~\eqref{icond} and boundary conditions~\eqref{bccond} on domains with the oversized ring thickness of 25~mm and with the real ring thickness of 2~mm. The problem was solved on domains with two different mesh discretization setups -- coarse mesh (1013~NDOFs with oversized ring and 1199~NDOFs with real ring thickness) and fine mesh (31848~NDOFs with oversized ring and 32328~NDOFs with real ring thickness).  Details of different domains with different discretizations are depicted on figure~\ref{mesh-dens}. It is apparent that for coarse meshes the mesh density around the ring edge is governed by the domain shape. In order to validate the results the computation should be done on meshes, where the mesh density is not significantly influenced by the ring shape. Apparently, this is the case of the very fine meshes, where the mesh density $\Delta x$ was equal to the ring thickness (2~mm). The domain triangulation was conducted with T3D mesh generator~\citep{t3d}, which has been successfully for a number of large engineering problems~\citep{rypl2010, kruis2002}. Figure~\ref{mesh-errs} depicts the relation between the difference $I_s(t)-I_r(t)$, where $I_r(t)$ [L] is the cumulative flux across the Dirichlet boundary for the domain representing the real ring thickness, and $I_s(t)$~[L] is the cumulative flux across the Dirichlet boundary on domain representing the oversized ring thickness. It is concluded that with the increased mesh density the difference $I_s(t)-I_r(t)$ vanishes.  And so it becomes apparent, that oversizing the ring thickness does not significantly affect the fluxes through the top Dirichlet boundary, which is the only important part of the solution of~\eqref{richaxi} for our calibration process.
+\mich{\linelabel{line:thckstart} In order to evaluate the effect of such simplification we have solved the equation~\eqref{richaxi} accompanied with the initial condition~\eqref{icond} and boundary conditions~\eqref{bccond} on domains with the oversized ring thickness of 25~mm and with the real ring thickness of 2~mm. The SHP values were obtained from~\citep{retc} code for clay-loam. The problem was solved on domains with two different mesh discretization setups -- coarse mesh (1013~NDOFs with oversized ring and 1199~NDOFs with real ring thickness) and fine mesh (31848~NDOFs with oversized ring and 32328~NDOFs with real ring thickness).  Details of different domains with different discretizations are depicted on figure~\ref{mesh-eval}. It is apparent that for coarse meshes the mesh density around the ring edge is governed by the domain shape. In order to validate the results the computation should be done on meshes, where the mesh density is not significantly influenced by the ring shape. Apparently, this is the case of the very fine meshes, where the mesh density $\Delta x$ was equal to the ring thickness (2~mm). The domain triangulation was conducted with T3D mesh generator~\citep{t3d}, which has been successfully used for a number of large scale engineering problems~\citep{rypl2010, kruis2002}. Figure~\ref{mesh-errs} depicts the relation for the difference $I_s(t)-I_r(t)$, where $I_r(t)$ [L] is the cumulative flux across the Dirichlet boundary for the domain representing the real ring thickness, and $I_s(t)$~[L] is the cumulative flux across the Dirichlet boundary on domain representing the oversized ring thickness. It is concluded that with the increased mesh density the difference $I_s(t)-I_r(t)$ vanishes.  And so it becomes apparent, that oversizing the ring thickness does not significantly affect the fluxes through the top Dirichlet boundary, which is the only important part of the solution of~\eqref{richaxi} for our calibration process. \linelabel{line:thckend}
 
  \begin{figure}
 \centering
 \rotatebox{90}{
 \includegraphics[height=11cm]{data/mesh-evals/site-eval.pdf}}
  \caption{Details of domains with the oversized ring thickness and the real ring thickness discretized with different triangulation densities. Details a) 1013~NDOFs, b) 1199~NDOFs, c) 31848~NDOFs,  d) 32328~NDOFs. }
- \label{mesh-dens}
+ \label{mesh-eval}
 \end{figure}
 
  \begin{figure}
@@ -423,7 +444,7 @@ In order to avoid computational difficulties during the automatic calibration pr
 \subsubsection{Stability restrictions of convection dominant problems}
 \label{restrconvect}
 
-The equation \eqref{convect} refers to coefficient  of the first order derivative term in~\eqref{richaxi}, and so the well known stability restrictions for the numerical solutions of the convection-diffusion problems appear here~\cite{zienkiewicz1976}.
+The equation \eqref{convect} refers to coefficient  of the first order derivative term in~\eqref{richaxi}, and so the well known stability restrictions for the numerical solutions of the convection-diffusion problems appear here~\citep{zienkiewicz1976}.
 The Peclet number representing the numerical stability of convection-diffusion problems is defined as~\citep{knobloch2008} 
 \begin{lineq}
 \label{peclet-std}
@@ -434,16 +455,16 @@ where $c$ is the convection coefficient defined in~\eqref{convect}, $\Delta x$ i
 \label{peclet-re}
 Pe =  \frac{\frac{1}{r}K(h) \Delta x}{2K(h)} = \frac{\Delta x}{2r}.
 \end{lineq}
-Since our mesh is triangular, $\Delta x$ can be roughly assumed to be the greatest triangle altitude (since we assume some mesh quality properties). Then a sufficient distance from the axis of anisotropy is such that the Peclet number is sufficiently low. If we want to make our computation free of the well
+Since our mesh is triangular, $\Delta x$ can be roughly assumed to be the greatest triangle altitude (since we assume some mesh quality properties). Then a sufficient distance from the axis of axisymmetry is such that the Peclet number is sufficiently low. If we want to make our computation free of the well
   known spurious oscillations~\citep{zienkiewicz1976, roos-layers}, 
-a sufficiently low Peclet number $Pe\le 1$ is required. Therefore, the distance from the axis of anisotropy is given by the domain discretization step at 
+a sufficiently low Peclet number $Pe\le 1$ is required. Therefore, the distance from the axis of axisymmetry is given by the domain discretization step at 
 the left hand side boundary. The selected discretization step at the left hand side boundary was assumed as $\Delta x=2$~cm. The domain was therefore 
-detached by 2~cm from the axis of anisotropy, and thus the Peclet number was 0.5 only. \mich{This simplification must be again validated. However, compared 
+detached by 2~cm from the axis of axisymmetry, and thus the Peclet number was 0.5 only. \mich{\linelabel{line:convstart} This simplification must be again validated. However, compared 
 to the oversized ring thickness, it is impossible to numerical model domains, where $r_{min}=0$. And so three different setups, where the domain was 
-detached for $r_{min}=$0.2,~1.0, and 2.0~cm from the center of anisotropy, were tested. In order to maintain the Peclet number on equal level, the mesh density
+detached for $r_{min}=$0.2,~1.0, and 2.0~cm from the center of axisymmetry, were tested. In order to maintain the Peclet number on equal level, the mesh density
  $\Delta x$ at the left hand side boundary should be equal to $r_{min}$. It is apparent, that compared to the previous case, where we were evaluating the oversized ring thickness, changing the location of the left hand side boundary will significantly affect the mesh size, as depicted on figure~\ref{mesh-dens}. In order to obtain comparable data,  three different domains with $r_{min}$=0.2,~1.0, and 2.0~cm  were triangularized with equal mesh densities given by the lowest $r_{min}$  (in order to obtain comparable data). It turns out, that for $r_{min}$=2.0~cm the Peclet number~\eqref{peclet-re} was $Pe=0.05$, and the mesh size was 10851~NDOFs, for $r_{min}$=1.0~cm the Peclect number was $Pe=0.25$, and the mesh size was 100036~NDOFs , and for $r_{min}=0.2$~cm the Peclet number was $Pe=0.5$, and the mesh size was 10156~NDOFs. Since the Peclet numbers are already very low, the solutions are free of spurious oscillations, and can be compared. Please note, that the mesh sizes with decreasing $r_{min}$ doesn't increase monotonously, since the mesh is non-uniform and different mesh density and domain shape configurations lead to different triangularizations.
  
- Similarly to the previous section~\ref{shaperestr}, the equation~\eqref{richaxi} accompanied with the initial~\eqref{icond} and boundary conditions~\eqref{bccond} was solved on three different domains with $r_{min}=$0.2,~1.0,~2.0~cm. The figure~\ref{mesh-evals2} depicts the difference between the cumulative volumetric flux across  the top Dirichlet boundary for the domains with $r_{min}$ offset 2.0~cm and 1.0~cm, and with $r_{min}$ offset 2.0~cm and 0.2~cm. It is apparent, that while decreasing the offset with ratios 0.5 and 0.1 the differences between the cumulative fluxes maintain similar order of magnitude. The differences probably originate from different domains triangularizations, and are below the data resolution originating from in-situ experimental conditions.
+ Similarly to the previous section~\ref{shaperestr}, the equation~\eqref{richaxi} accompanied with the initial~\eqref{icond} and boundary conditions~\eqref{bccond} was solved on three different domains with $r_{min}=$0.2,~1.0,~2.0~cm. The SHP values were again obtained from~\citep{retc} code for clay-loam. The figure~\ref{mesh-evals2} depicts the difference between the cumulative volumetric flux across  the top Dirichlet boundary for the domains with $r_{min}$ offset 2.0~cm and 1.0~cm, and with $r_{min}$ offset 2.0~cm and 0.2~cm. It is apparent, that while decreasing the offset with ratios 0.5 and 0.1 the differences between the cumulative fluxes maintain similar order of magnitude. The differences probably originate from different domains triangularizations, and are below the data resolution originating from in-situ experimental conditions. \linelabel{line:convend}
  
  }
 
@@ -453,7 +474,7 @@ detached for $r_{min}=$0.2,~1.0, and 2.0~cm from the center of anisotropy, were 
 \centering
 \rotatebox{-90}{
 \includegraphics[height=7cm]{data/mesh-dens/denses.eps}}
- \caption{Relation between the distance from the axis of anisotropy ($r_{min}$) and the mesh size (NDOFs), while maintaining the Peclet number of convective dominance~\eqref{peclet-re} at constant level. Over 100 meshes with T3D mesh generator~\citep{t3d} were generated for this plot, the relation is not monotoneous, since different mesh densities yield different triangularizations.}
+ \caption{Relation between the distance from the axis of axisymmetry ($r_{min}$) and the mesh size (NDOFs), while maintaining the Peclet number of convective dominance~\eqref{peclet-re} at constant level. Over 100 meshes with T3D mesh generator~\citep{t3d} were generated for this plot, the relation is not monotoneous, since different mesh densities yield different triangularizations.}
  \label{mesh-dens}
 \end{figure}
 
@@ -524,10 +545,10 @@ where $T_{end}$ is the final simulation time [$T$], which is indeed the root mea
 
 \end{enumerate}
 
-\mich{The first objective function~\eqref{objektiva1} refers to overall mismatch between the experimental and model data. The second objective function~\eqref{objektiva2} refers to a local mismatch, which  often appeared  in the early simulation time. Slight local mismatch in the initial simulation has typically low impact on~\eqref{objektiva1}, but points to a significantly different SHP set -- a local extreme. The strategy, where we focus both on the global and local error is motivated by~\cite{papez2014}, where it states that the reliable stopping criteria for iterative algebraic solvers should  take into account spatial distribution of the total error in the function space.
-The third objective function~\eqref{objektiva3} points to saturated hydraulic conductivity. Again slight mismatch in the final derivatives has low impact on the first objective function~\eqref{objektiva1}, but points to a significantly different saturated hydraulic conductivity.}
+\mich{\linelabel{line:objstart} The first objective function~\eqref{objektiva1} refers to overall mismatch between the experimental and model data. The second objective function~\eqref{objektiva2} refers to a local mismatch, which  often appeared  in the early simulation time. Slight local mismatch in the initial simulation has typically low impact on~\eqref{objektiva1}, but points to a significantly different SHP set -- a local extreme. The strategy, where we focus both on the global and local error is motivated by~\cite{papez2014}, where it states that the reliable stopping criteria for iterative algebraic solvers should  take into account spatial distribution of the total error in the function space.
+The third objective function~\eqref{objektiva3} points to saturated hydraulic conductivity. Again slight mismatch in the final derivatives has low impact on the first objective function~\eqref{objektiva1}, but points to a significantly different saturated hydraulic conductivity.\linelabel{line:objend} }
 
-We conducted multi-objective optimization. However, it is apparent that minimizing the objective function~\eqref{objektiva1} also minimizes the objective functions~\eqref{objektiva2} and \eqref{objektiva3}, \mich{and so we have introduced here a multiobjective definition with  non-competing objective functions. 
+\linelabel{line:multistart} We conducted multi-objective optimization. However, it is apparent that minimizing the objective function~\eqref{objektiva1} also minimizes the objective functions~\eqref{objektiva2} and \eqref{objektiva3}, \mich{and so we have introduced here a multiobjective definition with  non-competing objective functions. 
 
 The usage of multi-objective optimization  to solve inverse problems is three-fold: (i) to speed-up the convergence in
 case of non-competing objective functions, (ii) to find out the trade-off among the measurements' errors in case of
@@ -557,7 +578,7 @@ degrees of freedom) of the used model leading to \emph{overfitting}, see \cite{W
 functions can be minimized towards the zero individually but not jointly. The multi-objective approach then enables
 (ii) to find out the trade-off among individual errors and (iii) to set up the importance of the individual
 measurements {\it a~posteriori} after the search, see e.g. \cite{Kuraz:2010:JCAM} or \cite{Gong:2015} for such
-applications.
+applications. \linelabel{line:multiend}
 
 
 }
@@ -573,13 +594,13 @@ applications.
 \paragraph{Genetic algorithm}
 
 In this contribution we used the modified genetic algorithm GRADE \citep{grade,Kucerova:2007:PHD} supported by niching method CERAF~\citep{Hrstka} enhancing the algorithm with
-memory and restarts. \mich{GRADE is a real-coded genetic algorithm combining the ideas of genetic operators: cross-over, mutation and selection
+memory and restarts. \mich{\linelabel{line:gradestart} GRADE is a real-coded genetic algorithm combining the ideas of genetic operators: cross-over, mutation and selection
 taken from the standard genetic algorithm and differential operators taken from differential evolution. In more detail,
 a new population is created with the same size as the old population by 40\% using a vectorized mutation and 60\% by
 the differential cross-over, see references above for particular details. Then the next generation is created by
 survival selection employing an inverse tournament selection, where the worse from two competitors is rejected
 repeatedly until the original size of the population is reached. In our case, the population of the genetic
-algorithm contains 30 independent solutions, 12 new solutions are created by mutation and 18 by cross-over, respectively. The whole identification stops after 40.000 evaluations of the problem simulations.
+algorithm contains 30 independent solutions, 12 new solutions are created by mutation and 18 by cross-over, respectively. The whole identification stops after 40.000 evaluations of the problem \linelabel{line:gradeend} simulations.
 
 When GRADE algorithm converges, the current position of the optimization algorithm is marked as a local extreme, is
 stored in a memory, and a forbidden area is built around it in order to forbid the optimization algorithm to fall into
@@ -587,7 +608,7 @@ the same local extreme again and the whole algorithm is re-started. In our case 
 evaluations without any improvement.}
 
 GRADE project is capable for multi-objective definition for the objective function, which is achieved with so-called
- Average Ranking (AR) \citep{Leps2007}. It sums ranks of the objective functions instead of the objective functions' values. Therefore, no weights are needed, however, the Pareto-dominance is not preserved as described in \cite{vitingerova:2010}. An application of the AR algorithm to parameters identification can be found in \cite{Kuraz:2010:JCAM}. 
+ Average Ranking (AR) \citep{Leps2007}. It sums ranks of the objective functions instead of the objective functions' values. Therefore, no weights are needed, however, the Pareto non-dominance is not preserved as described in \cite{vitingerova:2010}. An application of the AR algorithm to parameters identification can be found in \cite{Kuraz:2010:JCAM}. 
 
  
  
@@ -662,14 +683,14 @@ The calibration algorithm is described as follows:
 
  \begin{enumerate}[label={\bf [\Roman*.]}]
     \item  {\bf Do} initial calibration  with genetic algorithm GRADE~\citep{grade} and with semiexplicit method~\eqref{matice2} ($\varepsilon \leadsto +\infty$), $r_f$=0,  vectors $\vec{p}_{max,min}^{r_f}$ are taken from table~\ref{rozsahy}
-     \item \label{docal} {\bf Create}  sequence of vectors $\vec{\bar{p}}^{i_e}_{r_f}$.\mich{ Please note that these extremes are typically parameter sets in a vicinity of the objective function minimum.}
+     \item \label{docal} {\bf Create}  sequence of vectors $\vec{\bar{p}}^{i_e}_{r_f}$.\mich{ Please note that these extremes are typically parameter sets in a vicinity of a minimum of the objective function~\eqref{objektiva1}.}
          \begin{itemize} \item {\bf If} the problem is multimodal 
        \begin{itemize} 
            \item {\bf then} $i_e > $ 1, 
            \item {\bf else} $i_e = $ 1.
        \end{itemize} 
        \end{itemize}
-      \item \label{gradient} \mich{{\bf For each } vector  $\vec{\bar{p}}^{i_e}_{r_f}$ conduct gradient optimization using Newton's method with box-constraints~\citep{byrd1995} on parameter ranges $\vec{p}^{i_e, r_f}_{max} = 1.1\vec{\bar{p}}^{i_e}_{r_f}$ and $\vec{p}^{i_e, r_f}_{min} = 0.9\vec{\bar{p}}^{i_e}_{r_f}$, where the initial estimate is obtained from the genetic algorithm solution $\vec{\bar{p}}^{i_e}_{r_f}$, so that the converged solution $\vec{p}^{i_e}_{r_f}$ is ensured.}
+      \item \label{gradient} \mich{{\bf For each } vector  $\vec{\bar{p}}^{i_e}_{r_f}$ conduct gradient optimization using {\bf single} objective~\eqref{objektiva1} with Newton's method with box-constraints~\citep{byrd1995} on parameter ranges $\vec{p}^{i_e, r_f}_{max} = 1.1\vec{\bar{p}}^{i_e}_{r_f}$ and $\vec{p}^{i_e, r_f}_{min} = 0.9\vec{\bar{p}}^{i_e}_{r_f}$, where the initial estimate is obtained from the genetic algorithm solution $\vec{\bar{p}}^{i_e}_{r_f}$, so that the converged solution $\vec{p}^{i_e}_{r_f}$ is ensured. }
 
  \item \label{validation} {\bf Do validation:}  
     \begin{enumerate} 
@@ -708,7 +729,7 @@ The calibration algorithm is described as follows:
 \end{enumerate}
 \end{enumerate}
 
-
+\mich{\linelabel{line:expstart} At the end of this calibration process we typically finish with a set of solutions $\vec{p}^{i_e}$, where $i_e \in \{1, ..., \mbox{[number of extremes]} \}$. At this stage an {\it expert knowledge} should be incorporated as a final decision making mechanism for obtaining the unique solution.  Despite the exact value of $\theta_s$ is not necessarily known, and so it can't be removed from the searched parametric space, acceptable ranges of $\theta_s$ form a part of the expert knowledge. The appropriate parametric set will be selected from the list of identified solutions on the basis of expected values of $\theta_s$ parameter. \linelabel{line:expend}} 
 
 \mich{
 \subsection{Mathematical model of the synthetic infiltration experiment}
@@ -1058,7 +1079,8 @@ extreme & $\theta_s$ [-]&$\alpha$ [cm$^{-1}$]&n [-]& $K_s$ [cm.hrs$^{-1}$]  & $S
 
 \mich{
 \subsection{Remarks on convergence behavior of the nonlinear operator}
-With the proposed methodology we have successfully mapped broad parametric space with more than 40.000 calls of the Richards equation solver DRUtES~\citep{drutes} at different refinement levels. In contrast to  results published by~\cite{beven2003-uncertain}, our computations were successful for all 100\% of the Richards equation calls. }  
+\label{convsolver}
+\linelabel{line:convsolver} the proposed methodology we have successfully mapped broad parametric space with more than 40.000 calls of the Richards equation solver DRUtES~\citep{drutes} at different refinement levels. In contrast to  results published by~\cite{beven2003-uncertain}, our computations were successful for all 100\% of the Richards equation calls. }  
 
 
 \subsection{Limitations and realism of results}
