--- a/letter2revs.tex
+++ b/letter2revs.tex
@@ -1,6 +1,9 @@
 %\documentclass[11pt]{article}
 %\documentclass{siamart1116}
- \documentclass[final,3p]{elsarticle}
+ \documentclass[final,3p, 11pt, a4paper]{elsarticle}
+% \documentclass[11pt]{letter}
+
+% \usepackage{fullpage}
 
 \addtolength{\textheight}{120pt} \addtolength{\topmargin}{-55pt}
 \textwidth 154mm \oddsidemargin 2.75mm
@@ -24,8 +27,8 @@
 
 % \usepackage[round]{natbib}
 
-\bibliographystyle{myplainnat}
-\usepackage{natbib}
+% \bibliographystyle{myplainnat}
+% \usepackage{natbib}
  \newcommand{\subscript}[2]{$#1 _ #2$}
 
  \usepackage{xr}
@@ -85,7 +88,7 @@ First of all we should highlight here, that the title of our paper has been upda
 
 \medskip
 
-\noindent {\it "Scanning methodology to avoid convergence issues during inverse identification of soil unsaturated hydraulic properties."}
+\noindent {\it "Automated calibration methodology to avoid convergence issues during inverse identification of soil unsaturated hydraulic properties."}
 
 \medskip
 
