--- a/letter2revs.tex
+++ b/letter2revs.tex
@@ -77,7 +77,7 @@
 {\it ``Inverse modeling of a single ring infiltration experiment: a key for analyzing unsaturated hydraulic properties of soils?''.}
 
 \medskip
-\noindent We would like to thank both referees and editors
+ We would like to thank both referees and editors
 for their valuable and constructive remarks and
 comments. 
 All remarks and proposals have been addressed in the current revision.
@@ -125,16 +125,16 @@ according the referees' remarks and comments.
 {\bf answer:} Following your advice  the abstract has been significantly reduced and rewritten.
 
 \item {\it Typically, the last paragraph of the introduction section is reserved for describing the aim, innovation, general methodology of the research. This is missing from this manuscript. I like the fact that the authors present their research questions, but they also need to briefly describe the methodology used to answer them and how it is novel.} \\ 
-{\bf  answer:} We completely agree with this remark, an extra section according to your advice has been added.
+{\bf  answer:} We completely agree with this remark, an extra paragraph according to your advice has been added.
 
 \item {\it The authors should state the country where the study area is located. Also, a short description of the synthetic problem should go under section 1.2} \\
 {\bf  answer:} 
 The country of origin has been added to site description  in Section \ref{povodi}, on line~\ref{line:marker}.
 
 \item {\it How was the boundary condition of H=-280 cm obtained? Was this based on experimental data?} \\
-{\bf  answer:} The estimate of the groundwater table is rather an overhead limit, which is still a sufficiently distant from the top soil layer -- the layer, which hydraulic properties are investigated. This overhead limit was assumed from the near surface tensionmeter measurements and with the assumption of a hydrostatic state in the unsaturated zone. We are VERY aware, that this estimation of the groundwater table is a subject of a HUGE uncertainty. However, such position of the groundwater table is VERY distant from the evaluated layer, and effects of such a deeply located  groundwater table on the infiltration experiment vanish. An explanation has been added in Section~\ref{povodi}, line~\ref{line:gw}.
+{\bf  answer:} The estimate of the groundwater table is rather an overhead limit, which is still a sufficiently distant from the top soil layer -- the layer, which hydraulic properties are investigated. This overhead limit was assumed from the near surface tensionmeter measurements and with the assumption of a hydrostatic state in the unsaturated zone. We are VERY aware, that this estimation of the groundwater table is a subject to a HUGE uncertainty. However, such position of the groundwater table is VERY distant from the evaluated layer, and effects of such a deeply located  groundwater table on the infiltration experiment vanish. An explanation has been added in Section~\ref{povodi}, line~\ref{line:gw}.
 \item {\it   The authors have assumed that the water table remains constant during the experiment. What are the potential implications of this assumption?} \\
-{\bf  answer:} We agree, that this assumption has also several limitations. An explanation was added at line~\ref{line:dbc}, section~\ref{ibc}. The potential implication of this assumption is that the groundwater aquifer adsorbs the entire infiltrated amount without affecting its volume. In theory, this assumption is non-physical. However, for a short time experiment, such as the evaluated infiltration experiment, when the infiltrated amount within the simulation time even doesn't reach the groundwater aquifer, and also with the consideration, that the infiltrated amount is completely negligible in comparison to the expected groundwater aquifer volume, this assumption becomes acceptable. 
+{\bf  answer:} We agree, that this assumption has also several limitations. An explanation was added at line~\ref{line:dbc}, section~\ref{ibc}. The potential implication of this assumption is that the groundwater aquifer adsorbs the entire infiltrating wetting front amount without affecting its volume. In theory, this assumption is non-physical. However, for a short time experiment, such as the evaluated infiltration experiment, when the infiltrated amount within the simulation time even doesn't reach the groundwater aquifer, and also with the consideration, that the infiltrated amount is completely negligible in comparison to the expected groundwater aquifer volume, this assumption becomes acceptable. 
 
 \item {\it There is an issue on line 186} \\
 {\bf  answer:} Thank you for this remark, we have now double-checked the latex compilation log for undefined and multiple defined references.
@@ -149,7 +149,7 @@ The country of origin has been added to site description  in Section \ref{povodi
 {\bf  answer:} Incorporation of the expert knowledge is now explained in section~\ref{methodo}, lines~\ref{line:expstart} -- \ref{line:expend}.
 
 \item {\it  Line 352 is not clear. Please explain in a more clear way your point about specific storage. I do not see what you explain reflected in figure 8.} \\ 
-{\bf  answer:} Finally, the specific storage was wiped out from the model due our misinterpretation of objective function response plots. This mistake was now corrected, and the non-zero specific storage forms a part of the parametric set.
+{\bf  answer:} Finally, the specific storage was wiped out from the model due our misinterpretation of objective function response plots. This mistake was now corrected, and the non-zero specific storage forms a part of one of the parametric sets.
 
 \end{enumerate}
 
@@ -171,7 +171,7 @@ The country of origin has been added to site description  in Section \ref{povodi
 
 
  2) The affect of the distance from the axi-symmetry (rererred to as axis of anisotropy in the paper) 2cm?. Again half and double to quantify the effect of this simplification on the estimated parameters.} \\
- {\bf answer:} Following you advice this model simplification were validated, the oversized ring thickness was validated in between lines \ref{line:thckstart} -- \ref{line:thckend}, and the detached domain was validated in between lines \ref{line:convstart} -- \ref{line:convend}.  However, validating this simplification becomes cumbersome due different triangularizations, which are required for different domain shapes.  In order to avoid effects of different domain trigularization, domains were discretized with extremely refined mesh densities.
+ {\bf answer:} Following you advice this model simplification were validated, the oversized ring thickness was validated in between lines \ref{line:thckstart} -- \ref{line:thckend}, and the detached domain was validated in between lines \ref{line:convstart} -- \ref{line:convend}.  However, validating this simplification becomes cumbersome due different triangularizations, which are required for different domain shapes.  In order to avoid effects of different domain trigularization, domains were discretized with  refined mesh densities.
 
 
 \item {\it Deterministic versus statistic:
@@ -199,7 +199,7 @@ Since this paper is concerned to calibration methodology, data error propagation
  {\bf answer:} Reference to the figure added on the top of the section~\ref{ibc} on line~\ref{line:ibc}.
  
  \item {\it Mathematical notation: Eq (11) dH/dn is vector, hence the RHS must also be a vector not a scalar 0.} \\
- {\bf answer:} Thank you for this feedback, corrected for $L_2$ norm.
+ {\bf answer:} Thank you for this feedback, corrected to $\mathcal{L}_2$ norm.
  
  \item {\it  On page 9 the Section number is missing (??)}\\
  {\bf answer:}  Thank you for this remark, we have now double-checked the latex compilation log for undefined and multiple defined references.
