--- a/version3.tex
+++ b/version3.tex
@@ -83,7 +83,7 @@
 
 \begin{frontmatter}
 
-\title{Inverse modeling of a single ring infiltration experiment: a key for analyzing unsaturated hydraulic properties of soils?}
+
 
 \title{Automated calibration methodology to avoid convergence issues during inverse identification of soil unsaturated hydraulic properties.}
 
@@ -105,6 +105,7 @@
 The single ring (hereafter SR) infiltration experiment is a standard and robust dynamic field experiment. The steady state part of this experiment is traditionally used for the identification of saturated hydraulic conductivity. In this contribution, we explore the possibility of extending the applicability of this experiment for evaluating the unsaturated hydraulic parameters from an unsteady part of this experiment for the top soil layer using inverse analyses of the governing flow motion equation.
 
 The problem of SR infiltration is governed by the quasilinear Richards equation. We present a new scanning methodology to avoid convergence issues with the nonlinear operator, originating from difficult combinations of input parameters, which can be hard to avoid when automatically analyzing a broad parameter space. We validated our methodology with virtual infiltration problems for clay and sand, and applied it on real-world SR infiltration data. To evaluate non-uniqueness, local optima were identified and mapped using a modified genetic algorithm with niching.
+
 Our results show the existence of multimodality in, both, the benchmark problems and the real-world problem. This is an important finding as local optima can be identified, which are not necessarily physical and also for systems that do not exhibit multimodal grain size distributions. The identified local optima were distinct and showed different retention and hydraulic conductivity curves. The most physical set of SHP could be identified with the knowledge of the saturated water content. 
 
 
@@ -116,7 +117,7 @@ Our results show the existence of multimodality in, both, the benchmark problems
 \end{abstract}
 
 \begin{keyword}
-soil hydraulic properties \sep inverse modeling \sep Richards equation \sep convergence issues  \sep automatic calibration \sep computational issues in geosciences  
+ single ring experiment \sep soil hydraulic properties \sep inverse modeling \sep Richards equation \sep convergence issues  \sep automatic calibration \sep computational issues in geosciences  
 
 %% MSC codes here, in the form: \MSC code \sep code
 %% or \MSC[2008] code \sep code (2000 is the default)
@@ -168,11 +169,13 @@ Their study did not mention explicitly why. \mich{ We assume that these converge
 The following questions arise: 
 \begin{itemize}
 \item How can convergence issues be avoided, especially when the parameter range is wide? 
+\item Is it possible to approximate the unsteady SR infiltration experiment using the REVG model, where the only unknown parameters represent the thin topsoil layer, by a unique set of parameters? 
+\item If not, are all parameters vulnerable to non-uniqueness?
 \end{itemize}
 
 To answer these questions we employed a new calibration methodology.
 
- \mich{The purpose of this paper is to answer the given research questions. The first part of the paper presents the real world background of the analyzed SR infiltration data. However, for the demonstrative purposes of this contribution, we have significantly reduced this data part, and only the mean values are analyzed here. Data error propagation and further statistical analyzes are beyond the scope of this paper. The major part of this paper is focused on a design calibration methodology of the SR experiment. We start with derivation of the governing equation for this class of problems. Numerical issues with convective term as well as the domain shape restrictions and boundary condition setup is given. Then we continue with a synthetic inverse problem with known exact solution, where we try to identify SHPs from cumulative fluxes across the Dirichlet boundary, which is an analogy to the infiltration experiment.  Further we propose calibration methodology, where we presume smooth and continuous convergence properties of the inverse problem, which is represented by a discrete and linearized analogue of the Richards equation, for both nonlinear operator stopping criterion, temporal discretization and spatial discretization. Based on the results from the synthetic problem, we are already aware of multimodality of this inverse model. In order to obtain a unique solution we employ an expert knowledge as a final decision making criterion, since each parametric set comes with a distinct saturated water content (herafter $\theta_s$) value. Although we can't measure the exact value of $\theta_s$ for the top soil layer, since it is impossible to collect undisturbed samples with representative volume size, and so removing this parameter from the inverse model is questionable, acceptable ranges of $\theta_s$ form a part of the expert knowledge. 
+ \mich{The purpose of this paper is to answer the given research questions. The first part of the paper presents the real world background of the analyzed SR infiltration data. However, for the demonstrative purposes of this contribution, we have significantly reduced this data part, and only the mean values are analyzed here. Data error propagation and further statistical analyzes are beyond the scope of this paper. The major part of this paper is focused on a design of calibration methodology for the SR experiment. We start with derivation of the governing equation for this class of problems. Numerical issues with convective term as well as the domain shape restrictions and boundary condition setup is given. Then we continue with a synthetic inverse problem with known exact solution, where we try to identify SHPs from cumulative fluxes across the Dirichlet boundary, which is an analogy to the infiltration experiment.  Further we propose calibration methodology, where we presume smooth and continuous convergence properties of the inverse problem, which is represented by a discrete and linearized analogue of the Richards equation, for both nonlinear operator stopping criterion, temporal discretization and spatial discretization. Based on the results from the synthetic problem, we are already aware of multimodality of this inverse model. In order to obtain a unique solution we employ an expert knowledge as a final decision making criterion, since each parametric set comes with a distinct saturated water content (herafter $\theta_s$) value. Although we can't measure the exact value of $\theta_s$ for the top soil layer, since it is impossible to collect undisturbed samples with representative volume size, and so removing this parameter from the inverse model is questionable, acceptable ranges of $\theta_s$ form a part of the expert knowledge. 
  
  In general, the proposed novel calibration methodology can be applied  for inverse analyses of quasi-linear parabolic differential equations, such as Richards equation problems.
  }
@@ -229,9 +232,9 @@ A detail description on $K_s$ and $S_s$ parameter is given by~\cite{bear1979}, a
 }
 
 
-The study site was located in the \v{S}umava National Park, \mich{Czech Republic},\linelabel{line:marker} and has been described in \citep{Jacka1}. The location of the site in a map of Modrava 2 catchment is presented by \cite{Jacka2}.
+The study site was located in the \v{S}umava National Park, \mich{Czech Republic},\linelabel{line:marker} and has been described by \cite{Jacka1}. The location of the site in a map of Modrava 2 catchment is presented by \cite{Jacka2}.
 The soil profile is described by four different layers as seen in figure~\ref{experiment}. 
-\mich{Series \linelabel{line:gw} of tension meter measurements of the top soil layer have been conducted on the site. The average soil suction head was estimated at 280~cm. If we further assume no-flow initial condition, then the average groundwater table can be roughly estimated at 280~cm below the surface. We are aware, that this assumption is a subject to strong uncertainty. In the real world the soil suction head distribution is almost never hydrostatic (especially for this relatively humid mountainous region). And so the estimated groundwater table is rather an overhead limit, which is already a significantly distant from the top-soil layer. With such hydrogeological configuration the effect of groundwater on infiltration experiment is expected to vanish. }
+\mich{Series \linelabel{line:gw} of tension meter measurements of the top soil layer have been conducted on the site. The average soil suction head was estimated at 280~cm. If we further assume hydrostatic (no-flow) initial condition, then the average groundwater table can be roughly estimated at 280~cm below the surface. We are aware, that this assumption is a subject to strong uncertainty. In the real world the soil suction head distribution is almost never hydrostatic (especially for this relatively humid mountainous region). And so the estimated groundwater table is rather an overhead limit, which is already a significantly distant from the top-soil layer. With such hydrogeological configuration the effect of groundwater on infiltration experiment is expected to vanish. }
 
 
 
@@ -321,7 +324,7 @@ where $V$ is the volume function [-],  $r$ is the radial coordinate, $\alpha$ is
 \label{richaxi}
 \left(\frac{\dd \theta}{\dd h} + S_s\frac{\theta(h)}{\theta_s} \right) \frac{\partial h}{\partial t}  =  \frac{\partial K(h) \frac{\partial H}{\partial z}}{\partial z} + \frac{\partial K(h) \frac{\partial H}{\partial r}}{\partial r} + c(\vec{x})\frac{\partial H}{\partial r},
 \end{lineq}
-where $S_s$ is the specific storage [L$^{-1}$], $\theta_s$ is the saturated water content [-],  $c(\vec{x})$ is the coefficient of the convection for $r$ coordinate [T$^{-1}$], which is explained below, and the vector $x$ is a vector of the spatial coordinates $\vec{x}=\left( \begin{smallmatrix} r \\ z \end{smallmatrix} \right)$.
+where $S_s$ is the specific storage [L$^{-1}$], $\theta_s$ is the saturated water content [-],  $c(\vec{x})$ is the coefficient of the convection for $r$ coordinate [T$^{-1}$], which is explained below, and the vector $\vec{x}$ is a vector of the spatial coordinates $\vec{x}=\left( \begin{smallmatrix} r \\ z \end{smallmatrix} \right)$.
 
  \begin{figure}
 \centering
@@ -378,13 +381,13 @@ The left hand side boundary was located at $r=2$~cm, and the right hand side bou
 \item the free drainage boundary (Neumann)
 \item the groundwater level - zero pressure head (Dirichlet)
 \end{itemize}
-It is apparent that the wetting front originating from our infiltration experiment affects the soil column only to a certain depth. Defining the Neumann no-flow boundary at a sufficient depth would probably not have a significant effect on the cumulative flux at the top Dirichlet boundary. At the same time, the only physically acceptable location of the no-flow boundary is the groundwater table. The second option -- the free drainage boundary -- would be completely incorrect for any depth, because we consider the initial condition to represent a hydrostatic state, and so \begin{lineq} \frac{\partial h}{\partial z}(x) = -1, \quad \forall x \in \Omega .\end{lineq} The free drainage boundary condition, which is defined as
+It is apparent that the wetting front originating from our infiltration experiment affects the soil column only to a certain depth. Defining the Neumann no-flow boundary at a sufficient depth would probably not have a significant effect on the cumulative flux at the top Dirichlet boundary. At the same time, the only physically acceptable location of the no-flow boundary is the impermeable layer. The second option -- the free drainage boundary -- would be completely incorrect for any depth, because we consider the initial condition to represent a hydrostatic state, and so \begin{lineq} \frac{\partial h}{\partial z}(x) = -1, \quad \forall x \in \Omega .\end{lineq} The free drainage boundary condition, which is defined as
 \begin{lineq}
 \frac{\partial h}{\partial \vec{n}}(x) = 0, \quad \forall (x,t) \in \Gamma_{\mbox{\footnotesize free drainage}} \times [0,T).
 \end{lineq}
 is in a conflict with the initial condition (since the outer normal vector $\vec{n} = \left(\begin{smallmatrix} &0 \\ -&1 \end{smallmatrix} \right)$), and produces extra computational costs. The computed fluxes produced at the bottom boundary in the beginning of the simulation with such a boundary setup, originates from the initial and boundary condition mismatch, and has no physical meaning.
 
-Physically correct boundary conditions for the bottom boundary is either the Neumann no-flow boundary at the impermeable layer or Dirichlet boundary both at the groundwater table. We chose a constant Dirichlet boundary condition. \mich{The minimum depth} of the groundwater table is approximately -280~cm below the surface, and  we assume that the water table remains constant during the experiment. With this particular setup the domain became extremely narrow and deep, see figure~\ref{valec}.\mich{ \linelabel{line:dbc} The potential implication of this assumption is that the groundwater aquifer adsorbs the entire infiltrated amount without affecting its volume. In theory, this assumption is non-physical. However, for a short  experiment, such as the evaluated infiltration experiment, when the infiltrated wetting front within the simulation time even doesn't reach vicinity of the groundwater aquifer, and  with the consideration, that the infiltrated amount is  negligible in comparison to the   aquifer volume, this assumption becomes acceptable.}
+Physically correct boundary conditions for the bottom boundary is either the Neumann no-flow boundary at the impermeable layer or Dirichlet boundary both at the groundwater table. We chose a constant Dirichlet boundary condition. \mich{The minimum depth} of the groundwater table was estimated at -280~cm below the surface, \mich{see the explanation given in section~\ref{site},} and  we assume that the water table remains constant during the experiment. With this particular setup the domain became extremely narrow and deep, see figure~\ref{valec}.\mich{ \linelabel{line:dbc} The potential implication of this assumption is that the groundwater aquifer adsorbs the entire infiltrated amount without affecting its volume. In theory, this assumption is non-physical. However, for a short  experiment, such as the evaluated infiltration experiment, when the infiltrating wetting front within the simulation time even doesn't reach a vicinity of the groundwater aquifer, and  with the consideration, that the infiltrated amount is  negligible in comparison to the   aquifer volume, this assumption becomes acceptable.}
 
 
 
@@ -399,7 +402,7 @@ h(x,t) &= 4 \; \mbox{cm} \Rightarrow H(x,t) = 4 \; \mbox{cm}; \\ &\forall (x,t) 
 h(x,t) &= 0  \; \mbox{cm}  \; \Rightarrow \; H(x,t) = -280.0  \; \mbox{cm}; \\ &\forall (x,t) \in \Gamma_3 \times [0,T).
 \end{split}
 \end{lineq}}
-where $T$ is the simulation end time [T], and $\vec{n}$ is the boundary normal vector.
+where $T$ is the simulation end time [T], and $\vec{n}$ is the outer normal boundary vector.
 
 \subsubsection{Domain shape restrictions}
 \label{shaperestr}
@@ -460,9 +463,9 @@ Since our mesh is triangular, $\Delta x$ can be roughly assumed to be the greate
 a sufficiently low Peclet number $Pe\le 1$ is required. Therefore, the distance from the axis of axisymmetry is given by the domain discretization step at 
 the left hand side boundary. The selected discretization step at the left hand side boundary was assumed as $\Delta x=2$~cm. The domain was therefore 
 detached by 2~cm from the axis of axisymmetry, and thus the Peclet number was 0.5 only. \mich{\linelabel{line:convstart} This simplification must be again validated. However, compared 
-to the oversized ring thickness, it is impossible to numerical model domains, where $r_{min}=0$. And so three different setups, where the domain was 
+to the oversized ring thickness, it is impossible to numerical model domains, where $r_{min}=0$ (where $r_{min}$ is the minimum distance of the domain from the center of axisymmetry).  And so three different setups, where the domain was 
 detached for $r_{min}=$~0.2,~1.0, and 2.0~cm from the center of axisymmetry, were tested. In order to maintain the Peclet number on equal level, the mesh density
- $\Delta x$ at the left hand side boundary should be equal to $r_{min}$. It is apparent, that compared to the previous case, where we were evaluating the oversized ring thickness, changing the location of the left hand side boundary will significantly affect the mesh size, as depicted in figure~\ref{mesh-dens}. In order to obtain comparable data,  three different domains with $r_{min}$=0.2,~1.0, and 2.0~cm  were triangularized with equal mesh densities given by the lowest $r_{min}$  (in order to obtain comparable data). It turns out, that for $r_{min}$=2.0~cm the Peclet number~\eqref{peclet-re} was $Pe=0.05$, and the mesh size was 10851~NDOFs, for $r_{min}$=1.0~cm the Peclect number was $Pe$=~0.25, and the mesh size was 100036~NDOFs , and for $r_{min}=$~0.2~cm the Peclet number was $Pe$=~0.5, and the mesh size was 10156~NDOFs. Since the Peclet numbers are already very low, the solutions are free of spurious oscillations, and can be compared. Please note, that the mesh sizes with decreasing $r_{min}$ doesn't increase monotonously, since the mesh is non-uniform and different mesh density and domain shape configurations lead to different triangularizations.
+ $\Delta x$ at the left hand side boundary should be equal to $r_{min}$. It is apparent, that compared to the previous case, where we were evaluating the oversized ring thickness, changing the location of the left hand side boundary will significantly affect the mesh size, as depicted in figure~\ref{mesh-dens}. In order to obtain comparable data,  three different domains with $r_{min}=0.2$,~1.0, and 2.0~cm  were triangularized with equal mesh densities given by the lowest $r_{min}$  (in order to obtain comparable data). It turns out, that for $r_{min}=2.0$~cm the Peclet number~\eqref{peclet-re} was $Pe=0.05$, and the mesh size was 10851~NDOFs, for $r_{min}=1.0$~cm the Peclect number was $Pe=0.25$, and the mesh size was 100036~NDOFs , and for $r_{min}=0.2$~cm the Peclet number was $Pe=0.5$, and the mesh size was 10156~NDOFs. Since the Peclet numbers are already very low, the solutions are free of spurious oscillations, and can be compared. Please note, that the mesh sizes with decreasing $r_{min}$ doesn't increase monotonously, since the mesh is non-uniform and different mesh density and domain shape configurations lead to different triangularizations.
  
  Similarly to the previous section~\ref{shaperestr}, the equation~\eqref{richaxi} accompanied with the initial~\eqref{icond} and boundary conditions~\eqref{bccond} was solved on three different domains with $r_{min}=0.2$,~1.0,~2.0~cm. The SHP values were again obtained from~\citep{retc} code for clay-loam. The figure~\ref{mesh-evals2} depicts the difference between the cumulative volumetric flux across  the top Dirichlet boundary for the domains with $r_{min}$ offset 2.0~cm and 1.0~cm, and with $r_{min}$ offset 2.0~cm and 0.2~cm. It is apparent, that while decreasing the offset with ratios 0.5 and 0.1 the differences between the cumulative fluxes maintain similar order of magnitude. The differences probably originate from different domains triangularizations, and are below the data resolution originating from in-situ experimental conditions. \linelabel{line:convend}
  
@@ -525,13 +528,13 @@ Then the objective function was defined for three different criteria in order to
 
  Both $\bar{I}(\vec{p},t)$ and $I(t)$ are continuous functions. Note please, that this is not a standard configuration. The objective functions were then defined as follows:
 \begin{enumerate}[label={\bf \Roman*}.]
-\item First criterion $\Psi_1$ was defined as $L_2$ norm of the difference between the  experimental and model data and thus
+\item First criterion $\Psi_1$ was defined as $\mathcal{L}_2$ norm of the difference between the  experimental and model data and thus
 \begin{lineq}
 \label{objektiva1}
 \Psi_1 (\vec{p}) = \frac{\sqrt{\int\limits_0^{T_{end}} \left( \bar{I}(\vec{p},t) - I(t) \right)^2 \dd t}}{T_{end}},
 \end{lineq}
 where $T_{end}$ is the final simulation time [$T$], which is indeed the root mean square error (RMSE) for continuous functions. 
-\item Second criterion was the $L_{\infty}$ norm of the difference between the experimental and model data and thus
+\item Second criterion was the $\mathcal{L}_{\infty}$ norm of the difference between the experimental and model data and thus
 \begin{lineq}
 \label{objektiva2}
 \Psi_2 (\vec{p}) = \mathrm{sup} \left( \sqrt{\left( \bar{I}(\vec{p},t) - I(t) \right)^2} \right), \quad  t \in (0, T_{end}).
@@ -567,9 +570,9 @@ Many classical material models have independent sets of parameters for different
 functions are non-competing. However, in many models, especially phenomenological ones, some parameters influence
 several model's outputs and therefore, they are dependent and the objectives can be competing.
 
-It must be pointed out that the perfect fit should not exist for real data because of the generalization and
-measurements errors. The zero error is usually result of insufficient experimepntal data and/or too many parameters (the
-degrees of freedom) of the used model leading to \emph{overfitting}, see \citep{Weise:2009}. Thus the individual error
+It must be pointed out that the perfect fit should not exist for real data because of the 
+model approximation errors, errors in model numerical representation, and 
+measurements errors (note please that measurement errors were not evaluated here). Thus the individual error
 functions can be minimized towards the zero individually but not jointly.
 Similar applications can be found in papers by  \cite{Kuraz:2010:JCAM} or \cite{Gong:2015}. \linelabel{line:multiend}
 
@@ -599,7 +602,7 @@ repeatedly until the original size of the population is reached. In our case, th
 algorithm contains 30 independent solutions, 12 new solutions are created by mutation and 18 by cross-over, respectively. The whole identification stops after 40.000 evaluations of the problem \linelabel{line:gradeend} simulations.
 
 When GRADE algorithm converges, the current position of the optimization algorithm is marked as a local extreme, is
-stored in a memory, and a forbidden area is built around it in order to forbid the optimization algorithm to fall into
+stored in a memory, and a forbidden area is built around it in order to avoid the optimization algorithm to fall into
 the same local extreme again and the whole algorithm is re-started. In our case a~local extreme was marked after 600
 evaluations without any improvement.}
 
@@ -611,7 +614,7 @@ GRADE project is capable for multi-objective definition for the objective functi
  \mich{
  \paragraph{Gradient algorithm} 
  
- Since achieving a fully converged solution with genetic algorithms can be cumbersome, as well as the selected optimal position at the Pareto front from the multi-objective minimization doesn't necessarily point to the the local minimum of each objective function, the following strategy was considered here. The genetic algorithm was used here as an estimator of the initial condition for further gradient parameter search on narrow ranges. For gradient optimization we made use of Newton's method with box-constraints~\citep{byrd1995}, implemented in R environment~\citep{R-env}. Compared to the genetic algorithm optimization, only single objective criteria given by~\eqref{objektiva1} is minimized here.
+ Since achieving a fully converged solution with genetic algorithms can be cumbersome, as well as the selected optimal position at the Pareto front from the multi-objective minimization doesn't necessarily point to the  local minimum of each objective function, the following strategy was considered here. The genetic algorithm was used here as an estimator of the initial condition for further gradient parameter search on narrow ranges. For gradient optimization we made use of Newton's method with box-constraints~\citep{byrd1995}, implemented in R environment~\citep{R-env}. Compared to the genetic algorithm optimization, only single objective criteria given by~\eqref{objektiva1} is minimized here.
 }
 
 
@@ -1082,7 +1085,7 @@ extreme & $\theta_s$ [-]&$\alpha$ [cm$^{-1}$]&n [-]& $K_s$ [cm.hrs$^{-1}$]  & $S
 \subsection{Limitations and realism of results}
 
 
-Local optima 7 resulted in the most realistic set for the podzolic top O+Ah soil layer, because of the most realistic value of $\theta_s$, which is slightly higher than for the E horizon (table \ref{tab_SHP}). Table \ref{shp-vysledky-final} shows a wide range of $\theta_s$ values, which can have huge implications for the water storage of the soil. The saturated hydraulic conductivity $K_s$ is similar across identified optima (table \ref{shp-vysledky-final}) and slightly lower than the lower horizon E (table \ref{tab_SHP}). A physical explanation for the lower estimate can be that the O+Ah top layer can swell and air can be entrapped during infiltration and therefore, the volume of the effective pores can be decreased. This can be indicated by the lower values of $\theta_s$. The identified $K_s$ will be lower than the $K_s$ fitted with the 1D Swartzendruber equation, because we are modeling 2D axisymmetric flow. 
+Local optima 7 resulted in the most realistic set for the podzolic top O+Ah soil layer, because of the most realistic value of $\theta_s$, which is slightly higher than for the E horizon (table \ref{tab_SHP}). Table \ref{shp-vysledky-final} shows a wide range of $\theta_s$ values, which can have huge implications for the water storage of the soil. The saturated hydraulic conductivity $K_s$ is similar across identified optima (table \ref{shp-vysledky-final}) and slightly lower than the lower horizon E (table \ref{tab_SHP}). A physical explanation for the lower estimate can be that the O+Ah top layer can swell and air can be entrapped during infiltration and therefore, the volume of the effective pores can be decreased. This can be indicated by the lower values of $\theta_s$. The identified $K_s$ will be lower than the $K_s$ fitted with the 1D Swartzendruber equation~\eqref{vyhlaz}, because we are modeling 2D axisymmetric flow. 
 
 The identified values for $\alpha$ are also similar in range across the optima (table \ref{shp-vysledky-final}). $\alpha$ is related to the inverse of the air entry value, which in terms of suction is greater than the initial condition. Figure \ref{retc-final} -- left shows that $\alpha$ barely impacts the shape of the retention curve in the modeled pressure head range, whereas $\theta_s$ and also $n$ impact the retention curve significantly. \mich{The unsaturated hydraulic conductivity depicted in figure~\ref{retc-final} -- right exhibit significant variance across the identified parametric sets.}
 
@@ -1278,7 +1281,7 @@ The updated solutions for the local extremes 7 and 8 are depicted in figures~\re
 \rotatebox{-90}{
 {\includegraphics[height=7cm]{images/fitrf1/7-new.eps}}}
 \label{rf0rf1img1}
-\caption{Left: Local extreme 7 infiltration curve for the original parameter set obtained at $r_f=0$ and solved on model with discretization $r_f=1$, right: solution for the updated parameter set in  vicinity of the extreme 7.}
+\caption{Left: Local extreme 7 infiltration curve for the original parameter set obtained at $r_f=0$ and solved on model with discretization $r_f=1$, right: updated solution for the refinement level $r_f=1$.}
 \end{figure}
 
 \begin{figure}
@@ -1287,7 +1290,7 @@ The updated solutions for the local extremes 7 and 8 are depicted in figures~\re
 \rotatebox{-90}{
 {\includegraphics[height=7cm]{images/fitrf1/8-new.eps}}}
 \label{rf0rf1img2}
-\caption{Left: Local extreme 8 infiltration curve for the original parameter set obtained at $r_f=0$ and solved on model with discretization $r_f=1$, right: solution for the updated parameter set in  vicinity of the extreme 7.}
+\caption{Left: Local extreme 8 infiltration curve for the original parameter set obtained at $r_f=0$ and solved on model with discretization $r_f=1$, right: updated solution for the refinement level $r_f=1$.}
 \end{figure}
 
 % \section{Response plots for objective functions, $r_f=1,2$}
